--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0"
+    "react-hook-form": "^7.38.0",
+    "sbd": "^1.0.19"
   },
   "devDependencies": {
     "eslint": "8.26.0",
