--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^109.0.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
